--- a/products/tea.html
+++ b/products/tea.html
@@ -242,6 +242,7 @@
         }
         .variant-card {
             transition: box-shadow 0.3s, transform 0.3s;
+            position: relative;
         }
         .variant-card:hover {
             box-shadow: 0 8px 32px rgba(44, 119, 68, 0.18), 0 1.5px 8px rgba(44, 119, 68, 0.10);
@@ -251,6 +252,34 @@
         }
         .variant-card:hover .variant-thumb {
             transform: scale(1.08);
+        }
+        .variant-card .variant-hover-overlay {
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(30, 41, 59, 0.45); /* dark, semi-transparent */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.2s;
+            z-index: 2;
+        }
+        .variant-card:hover .variant-hover-overlay {
+            opacity: 1;
+        }
+        .variant-card .variant-hover-overlay .eye-icon {
+            color: #fff;
+            font-size: 2rem;
+            margin-bottom: 0.25rem;
+        }
+        .variant-card .variant-hover-overlay .view-detail-text {
+            color: #fff;
+            font-size: 1rem;
+            font-weight: 500;
+            letter-spacing: 0.02em;
+            text-shadow: 0 2px 8px rgba(0,0,0,0.18);
         }
     </style>
 </head>
@@ -440,9 +469,13 @@
                 <div class="flex flex-wrap gap-4 justify-center md:justify-start">
                     <!-- PF (Pekoe Fannings) -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px] variant-card" onclick="openVariantPopup('PF (Pekoe Fannings)', 'Quick-brewing, strong flavored tea, perfect for commercial tea bags.', '/assets/images/black-tea-pf.jpg')">
-                        <div class="flex flex-col">
-                            <div class="h-48">
+                        <div class="flex flex-col relative">
+                            <div class="h-48 relative">
                                 <img src="/assets/images/black-tea-pf-thumbnail.jpg" alt="Black Tea PF" class="w-full h-full object-cover variant-thumb">
+                                <span class="variant-hover-overlay">
+                                    <i class="fas fa-eye eye-icon"></i>
+                                    <span class="view-detail-text">View Detail</span>
+                                </span>
                             </div>
                             <div class="p-4">
                                 <h4 class="font-bold text-primary text-center">PF (Pekoe Fannings)</h4>
@@ -452,9 +485,13 @@
 
                     <!-- OP (Orange Pekoe) -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px] variant-card" onclick="openVariantPopup('OP (Orange Pekoe)', 'Whole tea leaves offering delicate flavor and lighter body.', '/assets/images/black-tea-op.jpg')">
-                        <div class="flex flex-col">
-                            <div class="h-48">
+                        <div class="flex flex-col relative">
+                            <div class="h-48 relative">
                                 <img src="/assets/images/black-tea-op-thumbnail.jpg" alt="Black Tea OP" class="w-full h-full object-cover variant-thumb">
+                                <span class="variant-hover-overlay">
+                                    <i class="fas fa-eye eye-icon"></i>
+                                    <span class="view-detail-text">View Detail</span>
+                                </span>
                             </div>
                             <div class="p-4">
                                 <h4 class="font-bold text-primary text-center">OP (Orange Pekoe)</h4>
@@ -464,9 +501,13 @@
 
                     <!-- BOP (Broken Orange Pekoe) -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px] variant-card" onclick="openVariantPopup('BOP (Broken Orange Pekoe)', 'Strong, robust flavor ideal for breakfast blends.', '/assets/images/black-tea-bop.jpg')">
-                        <div class="flex flex-col">
-                            <div class="h-48">
+                        <div class="flex flex-col relative">
+                            <div class="h-48 relative">
                                 <img src="/assets/images/black-tea-bop-thumbnail.jpg" alt="Black Tea BOP" class="w-full h-full object-cover variant-thumb">
+                                <span class="variant-hover-overlay">
+                                    <i class="fas fa-eye eye-icon"></i>
+                                    <span class="view-detail-text">View Detail</span>
+                                </span>
                             </div>
                             <div class="p-4">
                                 <h4 class="font-bold text-primary text-center">BOP (Broken Orange Pekoe)</h4>
@@ -476,9 +517,13 @@
 
                     <!-- BOPF (Broken Orange Pekoe Fannings) -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px] variant-card" onclick="openVariantPopup('BOPF (Broken Orange Pekoe Fannings)', 'Strong, full-bodied brew with bright reddish liquor.', '/assets/images/black-tea-bopf.jpg')">
-                        <div class="flex flex-col">
-                            <div class="h-48">
+                        <div class="flex flex-col relative">
+                            <div class="h-48 relative">
                                 <img src="/assets/images/black-tea-bopf-thumbnail.jpg" alt="Black Tea BOPF" class="w-full h-full object-cover variant-thumb">
+                                <span class="variant-hover-overlay">
+                                    <i class="fas fa-eye eye-icon"></i>
+                                    <span class="view-detail-text">View Detail</span>
+                                </span>
                             </div>
                             <div class="p-4">
                                 <h4 class="font-bold text-primary text-center">BOPF (Broken Orange Pekoe Fannings)</h4>
@@ -488,9 +533,13 @@
 
                     <!-- Dust -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px] variant-card" onclick="openVariantPopup('Dust', 'Very strong, brisk cup for mass-market tea bags.', '/assets/images/black-tea-dust.jpg')">
-                        <div class="flex flex-col">
-                            <div class="h-48">
+                        <div class="flex flex-col relative">
+                            <div class="h-48 relative">
                                 <img src="/assets/images/black-tea-dust-thumbnail.jpg" alt="Black Tea Dust" class="w-full h-full object-cover variant-thumb">
+                                <span class="variant-hover-overlay">
+                                    <i class="fas fa-eye eye-icon"></i>
+                                    <span class="view-detail-text">View Detail</span>
+                                </span>
                             </div>
                             <div class="p-4">
                                 <h4 class="font-bold text-primary text-center">Dust</h4>
