--- a/products/black-tea-pf.html
+++ b/products/black-tea-pf.html
@@ -227,6 +227,67 @@
             font-size: 0.95rem;
             font-weight: 500;
         }
+        .section-card {
+            background: #fff;
+            box-shadow: 0 2px 12px rgba(44,119,68,0.07);
+            border-radius: 1rem;
+            padding: 1.5rem 2rem;
+            margin-top: 2.5rem;
+            margin-bottom: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            max-width: 700px;
+        }
+        .section-title {
+            font-size: 1.3rem;
+            font-weight: 700;
+            color: #2c7744;
+            margin-bottom: 0.7rem;
+            display: flex;
+            align-items: center;
+        }
+        .section-title i {
+            margin-right: 0.5rem;
+        }
+        .section-list {
+            font-size: 1.05rem;
+            color: #333;
+            margin-bottom: 0.2rem;
+        }
+        .oem-section {
+            background: linear-gradient(120deg, #f3fdf6 60%, #e6f4ea 100%);
+            border-left: 6px solid #2c7744;
+            box-shadow: 0 4px 24px rgba(44,119,68,0.10);
+            border-radius: 1.25rem;
+            padding: 2rem 2.5rem;
+            margin-top: 2.5rem;
+            margin-bottom: 0;
+            display: flex;
+            align-items: flex-start;
+            gap: 1.5rem;
+            max-width: 900px;
+        }
+        .oem-icon {
+            font-size: 2.5rem;
+            color: #2c7744;
+            flex-shrink: 0;
+            margin-top: 0.2rem;
+        }
+        .oem-content {
+            display: flex;
+            flex-direction: column;
+        }
+        .oem-title {
+            font-size: 1.25rem;
+            font-weight: 700;
+            color: #2c7744;
+            margin-bottom: 0.3rem;
+        }
+        .oem-desc {
+            font-size: 1.05rem;
+            color: #333;
+        }
     </style>
 </head>
 <body class="font-sans text-gray-800">
@@ -294,28 +355,6 @@
                                 <span class="characteristic-tag">Floral Sweetness</span>
                                 <span class="characteristic-tag">Malty Undertones</span>
                                 <span class="characteristic-tag">Astringent</span>
-                            </div>
-                            <div class="flex flex-wrap gap-4 mt-2 w-100">
-                                <div class="flex-1 min-w-[180px]">
-                                    <div class="font-semibold text-primary flex items-center mb-1"><i class="fas fa-mug-hot mr-2"></i>Commercial Applications</div>
-                                    <div class="text-sm text-gray-700 flex flex-col gap-1">
-                                        <span><b>Tea Bags:</b> Quick infusion time</span>
-                                        <span><b>RTD Products:</b> Ready-to-drink tea</span>
-                                    </div>
-                                </div>
-                                <div class="flex-1 min-w-[180px]">
-                                    <div class="font-semibold text-primary flex items-center mb-1"><i class="fas fa-box mr-2"></i>Packaging</div>
-                                    <div class="text-sm text-gray-700 flex flex-col gap-1">
-                                        <span><b>Standard:</b> 25kg kraft paper bags</span>
-                                        <span><b>Custom:</b> Customized solutions</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mt-4 w-full">
-                                <div class="flex items-center bg-primary/10 border border-primary/20 rounded-lg px-4 py-2 text-primary text-sm font-semibold">
-                                    <i class="fas fa-industry mr-2"></i>
-                                    Custom Brand Service (OEM/ODM): Private label & custom formulation available for your brand.
-                                </div>
                             </div>
                         </div>
                     </div>
