--- a/index.html
+++ b/index.html
@@ -293,81 +293,53 @@
     </section>
 
     <!-- About Us Section -->
-    <section id="about" class="py-28 bg-light">
-        <div class="container mx-auto px-6">
-            <div class="flex flex-col md:flex-row items-stretch gap-16">
-                <div class="md:w-1/2">
-                    <div class="relative h-[480px]">
-                        <img src="/assets/images/tea-plantation.jpg" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="w-full h-full object-cover rounded-2xl shadow-xl" loading="lazy">
-                        <div class="absolute -bottom-6 -right-6 bg-primary text-white p-8 rounded-2xl shadow-xl hidden md:block rotate-3 hover:rotate-0 transition-transform duration-300">
-                            <p class="text-4xl font-bold">20+</p>
-                            <p class="text-sm">Years of Experience</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="md:w-1/2 mt-8 md:mt-0">
-                    <h2 class="text-5xl font-bold text-primary mb-8">About Tropica Farmindo</h2>
-                    <p class="text-gray-600 mb-8 text-lg leading-relaxed">Tropica Farmindo is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:</p>
-                    
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
-                        <div class="border-l-4 border-primary pl-6">
-                            <div class="text-4xl font-bold text-primary mb-1">150</div>
-                            <div class="text-gray-600">Tons of Tea</div>
-                            <div class="text-sm text-gray-500">Per Month</div>
-                        </div>
-                        <div class="border-l-4 border-primary pl-6">
-                            <div class="text-4xl font-bold text-primary mb-1">20</div>
-                            <div class="text-gray-600">Tons of Essential Oils</div>
-                            <div class="text-sm text-gray-500">Per Month</div>
-                        </div>
-                    </div>
-
-                    <p class="text-gray-600 mb-12 text-lg leading-relaxed">While we're expanding our reach to international markets, we continue to serve our domestic partners with the highest quality products.</p>
-                    
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
-                        <div class="flex items-start">
-                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
-                                <i class="fas fa-industry text-2xl text-primary"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold text-xl mb-2">Production Capacity</h3>
-                                <p class="text-gray-600">170 tons of premium products monthly</p>
-                            </div>
-                        </div>
-                        <div class="flex items-start">
-                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
-                                <i class="fas fa-globe text-2xl text-primary"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold text-xl mb-2">Market Focus</h3>
-                                <p class="text-gray-600">Strong domestic presence with growing international reach</p>
-                            </div>
-                        </div>
-                        <div class="flex items-start">
-                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
-                                <i class="fas fa-certificate text-2xl text-primary"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold text-xl mb-2">Quality Standards</h3>
-                                <p class="text-gray-600">Consistent quality through 20+ years of expertise</p>
-                            </div>
-                        </div>
-                        <div class="flex items-start">
-                            <div class="bg-primary/10 p-4 rounded-xl mr-6">
-                                <i class="fas fa-handshake text-2xl text-primary"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold text-xl mb-2">Business Partners</h3>
-                                <p class="text-gray-600">Trusted by manufacturers and distributors nationwide</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="#contact" class="inline-flex items-center text-primary font-medium text-lg hover:text-accent transition">
-                        Learn more about our capabilities <i class="fas fa-arrow-right ml-3"></i>
-                    </a>
+    <section id="about" class="py-28 bg-light relative overflow-hidden">
+        <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-16">
+            <!-- Image & Badge -->
+            <div class="md:w-1/2 relative flex justify-center">
+                <img src="/assets/images/tea-plantation.jpg" alt="Lush green tea plantation" class="w-full h-[480px] object-cover rounded-2xl shadow-xl">
+                <div class="absolute bottom-6 left-6 bg-primary text-white p-6 rounded-2xl shadow-xl flex flex-col items-center animate-bounce-slow">
+                    <span class="text-4xl font-bold">20+</span>
+                    <span class="text-sm">Years of Experience</span>
                 </div>
             </div>
+            <!-- Content -->
+            <div class="md:w-1/2 flex flex-col justify-center">
+                <h2 class="text-5xl font-bold text-primary mb-6">About Tropica Farm</h2>
+                <p class="text-gray-600 mb-6 text-lg leading-relaxed">
+                    Tropica Farm is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:
+                </p>
+                <!-- Stats Row -->
+                <div class="flex gap-8 mb-8">
+                    <div class="text-center">
+                        <div class="text-4xl font-bold text-primary mb-1">150</div>
+                        <div class="text-gray-600">Tons of Tea<br><span class="text-sm text-gray-500">Per Month</span></div>
+                    </div>
+                    <div class="text-center">
+                        <div class="text-4xl font-bold text-primary mb-1">20</div>
+                        <div class="text-gray-600">Tons of Essential Oils<br><span class="text-sm text-gray-500">Per Month</span></div>
+                    </div>
+                </div>
+                <!-- Timeline / Milestones -->
+                <div class="mb-8">
+                    <ul class="flex flex-col md:flex-row gap-4 text-gray-700">
+                        <li class="flex items-center"><span class="w-3 h-3 bg-primary rounded-full mr-2"></span>First Export 2014</li>
+                        <li class="flex items-center"><span class="w-3 h-3 bg-primary rounded-full mr-2"></span>ISO Certified 2015</li>
+                        <li class="flex items-center"><span class="w-3 h-3 bg-primary rounded-full mr-2"></span>Global Reach 2020+</li>
+                    </ul>
+                </div>
+                <!-- Quote -->
+                <blockquote class="italic text-primary border-l-4 border-primary pl-4 mb-8">
+                    "Committed to quality and sustainability for over 20 years."
+                </blockquote>
+                <!-- CTA -->
+                <a href="#contact" class="inline-flex items-center bg-primary hover:bg-accent text-white px-8 py-3 rounded-lg transition font-medium w-max">
+                    Learn more about our capabilities <i class="fas fa-arrow-right ml-3"></i>
+                </a>
+            </div>
         </div>
+        <!-- Decorative SVG or Pattern (optional) -->
+        <svg class="absolute top-0 right-0 opacity-10 w-1/3 h-full pointer-events-none" viewBox="0 0 400 400"><circle cx="200" cy="200" r="200" fill="#2c7744"/></svg>
     </section>
 
     <!-- Products Section -->
@@ -496,7 +468,7 @@
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-primary mb-4">What Our Clients Say</h2>
-                <p class="text-gray-600 max-w-3xl mx-auto">Discover why global partners choose Tropica Farmindo for their premium tea and essential oil needs.</p>
+                <p class="text-gray-600 max-w-3xl mx-auto">Discover why global partners choose Tropica Farm for their premium tea and essential oil needs.</p>
             </div>
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-100">
@@ -507,7 +479,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p class="text-gray-600 mb-6 italic">"Tropica Farmindo's black tea quality is exceptional. As a wholesale distributor in Semarang, we've been sourcing their products for 3 years and consistently receive positive feedback from our business clients."</p>
+                    <p class="text-gray-600 mb-6 italic">"Tropica Farm's black tea quality is exceptional. As a wholesale distributor in Semarang, we've been sourcing their products for 3 years and consistently receive positive feedback from our business clients."</p>
                     <div class="flex items-center">
                         <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">AS</div>
                         <div>
@@ -524,7 +496,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p class="text-gray-600 mb-6 italic">"Tropica Farmindo's nutmeg oil has become a key ingredient in our cosmetic manufacturing business. The consistent quality and distinctive aroma have significantly enhanced our product line's market appeal."</p>
+                    <p class="text-gray-600 mb-6 italic">"Tropica Farm's nutmeg oil has become a key ingredient in our cosmetic manufacturing business. The consistent quality and distinctive aroma have significantly enhanced our product line's market appeal."</p>
                     <div class="flex items-center">
                         <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">DR</div>
                         <div>
@@ -541,7 +513,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <p class="text-gray-600 mb-6 italic">"As a regional distributor in Karawang, we value Tropica Farmindo's reliable supply chain and consistent product quality. Their business-to-business service has been instrumental in our growth."</p>
+                    <p class="text-gray-600 mb-6 italic">"As a regional distributor in Karawang, we value Tropica Farm's reliable supply chain and consistent product quality. Their business-to-business service has been instrumental in our growth."</p>
                     <div class="flex items-center">
                         <div class="bg-gray-200 h-12 w-12 rounded-full flex items-center justify-center text-primary font-bold mr-3">BS</div>
                         <div>
